tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__for_continue_with_comment.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    for i = 1, 10 do
local __DARKLUA_CONTINUE_1=false repeat        if i % 2 == 0 then
__DARKLUA_CONTINUE_1=true            break -- Skip even numbers
        end
        -- Print odd numbers
        print(i)
__DARKLUA_CONTINUE_1=true until true if not __DARKLUA_CONTINUE_1 then break end    end
