tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__for_inside_while.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    while notDone() do
        if hasEnded() then
            break
        end
        for i = 1, 10 do
local __DARKLUA_CONTINUE_2=false repeat            if i == 1 then
__DARKLUA_CONTINUE_2=true                break
            end
            print(i)
__DARKLUA_CONTINUE_2=true until true if not __DARKLUA_CONTINUE_2 then break end        end
    end
