tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__generic_for_continue_or_break.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    for key, value in array do
local __DARKLUA_CONTINUE_1=false repeat        if skip(key) then
__DARKLUA_CONTINUE_1=true            break
        elseif stop(key) then
            break
        end
        print(value)
__DARKLUA_CONTINUE_1=true until true if not __DARKLUA_CONTINUE_1 then break end    end
