tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__multiple_conditions_continue.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    for i = 1, 10 do
local __DARKLUA_CONTINUE_1=false repeat        if i < 3 or i > 8 then
__DARKLUA_CONTINUE_1=true            break
        end
        print(i)
__DARKLUA_CONTINUE_1=true until true if not __DARKLUA_CONTINUE_1 then break end    end
