tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__numeric_for_continue_first_case.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    for i = 1, 10 do
local __DARKLUA_CONTINUE_1=false repeat        if i == 1 then
__DARKLUA_CONTINUE_1=true            break
        end
        print(i)
__DARKLUA_CONTINUE_1=true until true if not __DARKLUA_CONTINUE_1 then break end    end
