tests/rule_tests/snapshots/rules__rule_tests__remove_continue__remove_continue_snapshots__repeat_inside_for.snap
---
source: tests/rule_tests/remove_continue.rs
expression: lua_code
---

    for key, value in array do
        if type(key) == 'number' then
            repeat
                key -= 1
            until key == 0
        elseif stop(key) then
            break
        end
        print(value)
    end
